testsuite/tests/saks/should_fail/saks_fail024.hs
{-# LANGUAGE StandaloneKindSignatures #-}

module SAKS_Fail024 where

import Data.Kind (Type)

type Data.Kind.Type :: Type
